syntax = "proto3";

package dental;

service DentalService {
  rpc CheckHealth (HealthRequest) returns (HealthResponse);
  rpc CheckReady  (ReadyRequest)  returns (ReadyResponse);
}

// Carries per-request tracing metadata; embed in every request message.
message RequestContext {
  string request_id = 1;
}

message HealthRequest {
  RequestContext context = 1;
}
message HealthResponse { string status = 1; }

message ReadyRequest {
  RequestContext context = 1;
}
message ReadyResponse  { string status = 1; }
